--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,4 +1,15 @@
-h1 {
-    color: red;
-    transform: translate(-50px 5px);
-  }
+@import "abstracts/functions";
+@import "abstracts/mixins";
+@import "abstracts/variables";
+
+@import "base/animations";
+@import "base/base";
+@import "base/typography";
+@import "base/utilities";
+
+@import "layout/footer";
+@import "layout/grid";
+@import "layout/navigation";
+
+@import "pages/home";
+
