added new partial imports for intro/definition/schedule/contact/gallery/and instructions sections

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -13,4 +13,10 @@
 
 @import "sections/home";
 @import "sections/about";
+@import "sections/intro";
+@import "sections/definition";
+@import "sections/schedule";
+@import "sections/contact";
+@import "sections/gallery";
+@import "sections/instructions";
 
