--- a/sass/sections/_intro.scss
+++ b/sass/sections/_intro.scss
@@ -4,7 +4,7 @@
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-  //   background-attachment: fixed;
+    background-attachment: fixed;
   height: 80vh;
   position: relative;
   display: flex;
@@ -12,7 +12,7 @@
   justify-content: center;
   align-items: center;
 
-    clip-path: polygon(0 0, 100% 0, 100% 87%, 0% 100%, 0 0);
+    clip-path: polygon(0 0, 100% 0, 100% 90%, 0% 100%, 0 0);
 
   &__content {
     opacity: 0;
