changed secondary color to white-smoke

--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -1,6 +1,6 @@
 // COLORS
 $color-primary: #468499;
-$color-secondary: white;
+$color-secondary: whitesmoke;
 
 // FONT
 $default-font-size: 1.6rem;
