--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -27,9 +27,10 @@ html {
 
 body {
   font-family: "Arimo", sans-serif;
-
   box-sizing: border-box;
   background: whitesmoke;
+  color: #515151;
+  
 
   @include respond(tab-port) {
     padding: 0;
@@ -43,7 +44,8 @@ body {
 .contact-schedule {
   margin: 5rem auto;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-evenly;
   align-items: center;
   height: 50vh;
+  opacity: 0;
 }
