--- a/sass/main.scss
+++ b/sass/main.scss
@@ -11,7 +11,7 @@
 @import "layout/grid";
 @import "layout/nav";
 
-@import "sections/home";
+@import "sections/steps";
 @import "sections/about";
 @import "sections/intro";
 @import "sections/definition";
