changed border around carousel to whitesmoke

--- a/sass/sections/_gallery.scss
+++ b/sass/sections/_gallery.scss
@@ -16,8 +16,8 @@
 
 }
 .main-carousel {
-  border-top: 1rem solid white;
-  border-bottom: 1rem solid white;
+  border-top: 1rem solid whitesmoke;
+  border-bottom: 1rem solid whitesmoke;
 }
 .carousel-image {
   width: 50rem;
