--- a/sass/layout/_nav.scss
+++ b/sass/layout/_nav.scss
@@ -1,6 +1,6 @@
 .nav {
-  background: whitesmoke;
-  color: black;
+  background: #515151;
+  color: whitesmoke;
   padding: 0.5em 2rem;
   position: fixed;
   width: 100%;
@@ -23,10 +23,11 @@
       border-bottom: 2px solid transparent;
       border-top: 2px solid transparent;
       transition: 0.5s all;
+      padding: 0 .5rem;
 
       &:hover {
-        border-bottom: 2px solid $color-primary;
-        border-top: 2px solid $color-primary;
+        border-bottom: 2px solid whitesmoke;
+        border-top: 2px solid whitesmoke;
         cursor: pointer;
 
       }
