--- a/sass/sections/_instructions.scss
+++ b/sass/sections/_instructions.scss
@@ -1,16 +1,22 @@
 .instructions-intro {
-  height: 50vh;
+  // height: 50vh;
   text-align: center;
-  margin: 8rem auto;
-  // background: whitesmoke;
+  margin-top: 5rem;
+  margin-bottom: 10rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
 
   &__header {
+    color: $color-primary;
     font-size: 5rem;
     text-align: center;
   }
 
   &__text {
     line-height: 175%;
+    
     margin: 1rem auto;
     font-size: 2rem;
     max-width: 75ch;
@@ -18,23 +24,25 @@
   }
 
   &__button {
+    width: fit-content;
     padding: 2rem 6rem;
     border: 0;
-    margin: 3rem auto;
     font-size: 2.5rem;
     background: $color-primary;
-    color: whitesmoke;
     box-shadow: 0 0.75rem 3rem gray;
     border-radius: 200px;
     border: 3px solid transparent;
     outline: none;
-    transition: 0.25s opacity;
+    text-decoration: none;
+    color: whitesmoke;
+
     &:hover {
-      color: $color-primary;
       background: whitesmoke;
       border: 3px solid $color-primary;
+      color: $color-primary;
       cursor: pointer;
     }
+
     &:active {
       box-shadow: 0 0.25rem 2rem gray;
     }
