--- a/sass/sections/_intro.scss
+++ b/sass/sections/_intro.scss
@@ -1,18 +1,24 @@
 .intro {
-  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-    url("./img/httan-header-1.jpg");
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-    background-attachment: fixed;
-  height: 80vh;
+  height: 80.5vh;
+  clip-path: polygon(0 0, 100% 0, 100% 90%, 0% 100%, 0 0);
+  background: $color-primary;
   position: relative;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
 
+  &__background {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+      url("./img/httan-header-1.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+    height: 80vh;
+    width: 100vw;
+    align-items: center;
     clip-path: polygon(0 0, 100% 0, 100% 90%, 0% 100%, 0 0);
+  }
 
   &__content {
     opacity: 0;
