--- a/sass/sections/_steps.scss
+++ b/sass/sections/_steps.scss
@@ -1,26 +1,20 @@
-.steps {
-  height: 90vh;
-  display: flex;
-  flex-direction: column;
-  // clip-path: polygon(0 0, 100% 0, 100% 87%, 0% 100%, 0 0);
-  // -webkit-clip-path: polygon(1% 1%, 99% 1%, 99% 83%, 18% 99%, 0% 100%);
-  // clip-path: polygon(1% 1%, 99% 1%, 99% 83%, 18% 99%, 0% 100%);
+.steps-intro {
   // background: rgba(0, 0, 0, 0.6); // 4s
-  // animation: fade-to-transparent 2s 4s forwards;
-  &__bg-video-parent {
-    overflow: hidden;
-  }
-
-  &__bg-video {
-    width: 100%;
-    z-index: -1;
-  }
+  // 2/4
+  animation: fade-to-transparent 2s 4s forwards;
+  // width: 100vw;
+  // height: 70vh;
+  background: $color-primary;
+  position: relative;
+  width: 100vw;
+  height: 100vh;
 
   &__initial-content {
-    opacity: 0;
-    font-family: "Bitter", serif;
+    position: relative;
+    top: 25%;
     text-align: center; //5.5s
-    animation: slide-up 1s forwards, fade-in-out 5.5s forwards;
+    // 1/5
+    animation: slide-up 1s forwards, fade-in-out 5s forwards;
   }
 
   &__logo {
@@ -66,5 +60,31 @@
     text-align: center;
     font-size: 7rem;
     color: $color-secondary;
+  }
+}
+.step-parent {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100vw;
+  height: 100vh;
+}
+.step {
+  display: none;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-direction: column;
+
+  &__header {
+    opacity: 0;
+    font-size: 2.5rem;
+    animation: fade-in 3s forwards;
+  }
+
+  &__content {
+    opacity: 0;
+    animation: fade-in 3s 1s forwards;
+    font-size: 2.5rem;
   }
 }
