--- a/sass/sections/_steps.scss
+++ b/sass/sections/_steps.scss
@@ -1,13 +1,77 @@
+.loading {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  width: 100vw;
+  height: 100vh;
+
+  &__bg-video {
+    position: absolute;
+    top: 0;
+    left: 0;
+    object-fit: fill;
+    width: 100vw;
+    height: 100vh;
+  }
+
+  &__text {
+    z-index: 1;
+    color: whitesmoke;
+    font-size: 4rem;
+    animation: fade-in-out 3s ease-in-out alternate infinite;
+  }
+}
+
+.spinner {
+  margin: 100px auto;
+  width: 20rem;
+  height: 10rem;
+  text-align: center;
+  font-size: 10px;
+}
+
+.spinner > div {
+  background-color: whitesmoke;
+  height: 100%;
+  width: 2rem;
+  display: inline-block;
+
+  -webkit-animation: sk-stretchdelay 1.2s infinite ease-in-out;
+  animation: sk-stretchdelay 1.2s infinite ease-in-out;
+}
+
+.spinner .rect2 {
+  -webkit-animation-delay: -1.1s;
+  animation-delay: -1.1s;
+}
+
+.spinner .rect3 {
+  -webkit-animation-delay: -1s;
+  animation-delay: -1s;
+}
+
+.spinner .rect4 {
+  -webkit-animation-delay: -0.9s;
+  animation-delay: -0.9s;
+}
+
+.spinner .rect5 {
+  -webkit-animation-delay: -0.8s;
+  animation-delay: -0.8s;
+}
+
 .steps-intro {
-  // background: rgba(0, 0, 0, 0.6); // 4s
-  // 2/4
-  animation: fade-to-transparent 2s 4s forwards;
-  // width: 100vw;
-  // height: 70vh;
+  // 2/4 
+  
+  opacity: 0;
+  animation: fade-in 2s forwards, fade-to-transparent 2s 4s forwards;
   background: $color-primary;
   position: relative;
   width: 100vw;
   height: 100vh;
+
+  display: none;
 
   &__initial-content {
     position: relative;
@@ -64,6 +128,7 @@
 }
 .step-parent {
   display: flex;
+  display: none;
   flex-direction: column;
   align-items: center;
   justify-content: center;
