--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -3,13 +3,12 @@
   display: flex;
   justify-content: center;
   flex-direction: column;
-  color: $color-primary;
+  color: whitesmoke;
   align-items: center;
   font-size: 1.5rem;
-  padding: .25rem 0;
-//   line-height: 175%;
-  font-weight: bold;
-  border-top: 4px solid $color-primary;
+  padding: .5rem 0;
+  line-height: 175%;
+  // font-weight: bold;
 
   &__logo {
     width: 4rem;
@@ -18,7 +17,7 @@
     transition: .25s background;
 
     &:hover {
-      background: white;
+      background: $color-primary;
       cursor: pointer;
     }
   }
