--- a/sass/layout/_nav.scss
+++ b/sass/layout/_nav.scss
@@ -1,5 +1,6 @@
 .nav {
   background: #515151;
+  // background: rgba(0,0,0,.25);
   color: whitesmoke;
   padding: 0.5em 2rem;
   position: fixed;
@@ -7,7 +8,7 @@
   z-index: 9999;
 
   align-items: center;
-  border-bottom: 4px solid $color-primary;
+  // border-bottom: 4px solid $color-primary;
 
   &__content {
     text-align: center;
