--- a/sass/sections/_gallery.scss
+++ b/sass/sections/_gallery.scss
@@ -1,25 +1,33 @@
 .gallery {
   text-align: center;
-  margin-top: -9rem;
-  // background:
-  background: linear-gradient(
-      whitesmoke,
-      rgba(70, 132, 153, 0.25),
-      rgba(70, 132, 153, 0.25),
-      whitesmoke
-    ),
-    url("https://images.unsplash.com/photo-1501791330673-603715379ded?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=3a52bc4e101f33cbf1fd42e9c1604e02&auto=format&fit=crop&w=1350&q=80");
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
+  position: relative;
+
   height: 70vh;
-  
+
+  &__bg {
+    background: linear-gradient(whitesmoke,
+      rgba(70, 132, 153, 0.85),
+      rgba(70, 132, 153, 0.85),
+      whitesmoke);
+    position: absolute;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    height: 100%;
+    width: 100%;
+    filter: blur(2px);
+
+  }
+
 
 }
+
+
 .main-carousel {
   border-top: 1rem solid whitesmoke;
   border-bottom: 1rem solid whitesmoke;
 }
+
 .carousel-image {
   width: 50rem;
   height: 35rem;
