--- a/sass/sections/_steps.scss
+++ b/sass/sections/_steps.scss
@@ -8,11 +8,12 @@
 
   &__bg-video {
     position: absolute;
-    top: 0;
-    left: 0;
+
     object-fit: fill;
     width: 100vw;
     height: 100vh;
+    filter: blur(5px);
+    transform: scale(1.1);
   }
 
   &__text {
@@ -36,7 +37,6 @@
   height: 100%;
   width: 2rem;
   display: inline-block;
-
   -webkit-animation: sk-stretchdelay 1.2s infinite ease-in-out;
   animation: sk-stretchdelay 1.2s infinite ease-in-out;
 }
@@ -62,22 +62,18 @@
 }
 
 .steps-intro {
-  // 2/4 
-  
   opacity: 0;
   animation: fade-in 2s forwards, fade-to-transparent 2s 4s forwards;
   background: $color-primary;
   position: relative;
   width: 100vw;
   height: 100vh;
-
   display: none;
 
   &__initial-content {
     position: relative;
     top: 25%;
-    text-align: center; //5.5s
-    // 1/5
+    text-align: center;
     animation: slide-up 1s forwards, fade-in-out 5s forwards;
   }
 
