--- a/sass/sections/_steps.scss
+++ b/sass/sections/_steps.scss
@@ -1,3 +1,24 @@
+.step-bg {
+  background: $color-primary;
+}
+
+.home-btn {
+  opacity: 0;
+  margin: 1rem;
+  padding: 0;
+  font-size: 5rem;
+  animation: fade-in 1s forwards;
+  position: absolute;
+  top: 0;
+  left: 0;
+  text-decoration: none;
+  color: $color-primary;
+
+  &__icon {
+    color: whitesmoke;
+  }
+}
+
 .loading {
   display: flex;
   align-items: center;
@@ -8,7 +29,6 @@
 
   &__bg-video {
     position: absolute;
-
     object-fit: fill;
     width: 100vw;
     height: 100vh;
@@ -17,11 +37,40 @@
   }
 
   &__text {
-    z-index: 1;
+    animation: fade-in-out 3s ease-in-out alternate infinite;
     color: whitesmoke;
     font-size: 4rem;
-    animation: fade-in-out 3s ease-in-out alternate infinite;
+
   }
+
+  &__refresh-text {
+    font-size: 2rem;
+    color: whitesmoke;
+    z-index: 1;
+  }
+
+  &__refresh-btn {
+    background: whitesmoke;
+    color: $color-primary;
+    padding: 1rem 3rem;
+    font-size: 3rem;
+    margin-top: 4rem;
+    box-shadow: 0 1rem 3rem black;
+    border: 0;
+    border-radius: 50px;
+    transition: 1s all;
+
+    &:hover {
+      background: $color-primary;
+      color: whitesmoke;
+    }
+  }
+
+  &__text,
+  &__refresh-btn {
+    z-index: 1;
+  }
+
 }
 
 .spinner {
@@ -32,7 +81,7 @@
   font-size: 10px;
 }
 
-.spinner > div {
+.spinner>div {
   background-color: whitesmoke;
   height: 100%;
   width: 2rem;
@@ -63,7 +112,7 @@
 
 .steps-intro {
   opacity: 0;
-  animation: fade-in 2s forwards, fade-to-transparent 2s 4s forwards;
+  animation: fade-in 2s forwards, fade-to-transparent 2s 5s forwards;
   background: $color-primary;
   position: relative;
   width: 100vw;
@@ -88,28 +137,35 @@
     font-size: 0;
     width: fit-content;
 
-    & > :nth-child(n + 2):nth-child(-n + 8) {
+    &> :nth-child(n + 2):nth-child(-n + 8) {
       font-size: 7rem;
       animation: fade-out 0.9s forwards;
     }
+
     & :nth-child(8) {
       animation-delay: 1.5s !important;
     }
+
     & :nth-child(7) {
       animation-delay: 1.75s !important;
     }
+
     & :nth-child(6) {
       animation-delay: 2s !important;
     }
+
     & :nth-child(5) {
       animation-delay: 2.25s !important;
     }
+
     & :nth-child(4) {
       animation-delay: 2.5s !important;
     }
+
     & :nth-child(3) {
       animation-delay: 2.75s !important;
     }
+
     & :nth-child(2) {
       animation-delay: 3s !important;
     }
@@ -122,30 +178,130 @@
     color: $color-secondary;
   }
 }
+
 .step-parent {
+
+
   display: flex;
   display: none;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: space-around;
   width: 100vw;
   height: 100vh;
+  background: $color-primary;
+
 }
+
 .step {
+  height: 100%;
   display: none;
-  justify-content: space-evenly;
+  justify-content: center;
   align-items: center;
   flex-direction: column;
+  width: 75%;
+  background: whitesmoke;
+
 
   &__header {
-    opacity: 0;
-    font-size: 2.5rem;
-    animation: fade-in 3s forwards;
+
+    // opacity: 0;
+    font-size: 6rem;
+    // animation: fade-in 3s forwards;
   }
 
   &__content {
-    opacity: 0;
-    animation: fade-in 3s 1s forwards;
-    font-size: 2.5rem;
+    // opacity: 0;
+    // animation: fade-in 3s 1s forwards;
+    font-size: 2.25rem;
+    line-height: 150%;
+    width: 75ch;
+  }
+
+  &__btn-parent {
+    margin: 2rem auto;
+    text-align: center;
+
+    &>button {
+      font-size: 2rem;
+      background: $color-primary;
+      border: 0;
+      box-shadow: 0 .25rem 1rem black;
+      padding: 1rem 3rem;
+      color: whitesmoke;
+      transition: all .25s;
+
+      &:hover {
+        background: whitesmoke;
+        color: $color-primary;
+      }
+
+      &:active {
+        box-shadow: 0;
+      }
+    }
+
+  }
+
+  .step-one {
+    justify-content: space-around;
+
+
+
+    &__videos {
+      text-align: center;
+      width: 75%;
+
+      &>h3 {
+        font-size: 3rem;
+      }
+    }
+
+    &__vid-1,
+    &__vid-2 {
+      font-size: 3rem;
+      margin: 1rem;
+      padding: 1rem 3rem;
+      outline: none;
+      border: 0;
+      color: whitesmoke;
+      background: $color-primary;
+      box-shadow: 0 .25rem 1rem black;
+      transition: all .25s;
+
+      &:hover {
+        background: whitesmoke;
+        color: $color-primary;
+      }
+
+      &:active {
+        box-shadow: none;
+      }
+
+    }
+
+    &__icon-parent {
+      width: 100%;
+      height: 40rem;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+
+    &__icon {
+      font-size: 10rem;
+    }
+
+    &__video-parent {
+      margin: 0 auto;
+    }
+
+    &__video {
+      width: 70rem;
+      height: 40rem;
+      margin: auto;
+      display: none;
+
+    }
   }
 }
