added responsiveness to home page

--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -48,4 +48,9 @@ body {
   align-items: center;
   height: 50vh;
   opacity: 0;
+  @include respond(tab-port){
+    opacity: 1;
+    flex-direction: column-reverse;
+    height: fit-content;
+  }
 }
