--- a/sass/layout/_nav.scss
+++ b/sass/layout/_nav.scss
@@ -1,30 +1,37 @@
 .nav {
   background: #515151;
-  // background: rgba(0,0,0,.25);
   color: whitesmoke;
   padding: 0.5em 2rem;
-  position: fixed;
+  // position: fixed;
   width: 100%;
   z-index: 9999;
-
   align-items: center;
-  // border-bottom: 4px solid $color-primary;
+
+  @include respond(phone) {
+    padding: .5rem 0;
+    width: 100vw;
+  }
 
   &__content {
     text-align: center;
     font-size: 2.5rem;
 
-    & > ul {
-      display: inline-block;
+    @include respond(phone) {
+      font-size: 2.15rem;
     }
 
-    & > ul > li {
+    &>ul>li {
       display: inline-block;
       margin: 0 1rem;
       border-bottom: 2px solid transparent;
       border-top: 2px solid transparent;
       transition: 0.5s all;
       padding: 0 .5rem;
+
+      @include respond(phone) {
+        padding: 0;
+        margin: 0 .5rem;
+      }
 
       &:hover {
         border-bottom: 2px solid whitesmoke;
