--- a/sass/sections/_contact.scss
+++ b/sass/sections/_contact.scss
@@ -1,15 +1,21 @@
 .contact {
   text-align: center;
 
-  &__header{
-      color: $color-primary;
-      font-size: 5rem;
+  &__header {
+    color: $color-primary;
+    font-size: 5rem;
+
+    @include respond(phone) {
+      font-size: 3.5rem;
+    }
   }
-  &__info-box{
+
+  &__info-box {
     font-size: 2.2rem;
   }
-  &__icon{
-      color: $color-primary;
-      font-size: 5rem;
+
+  &__icon {
+    color: $color-primary;
+    font-size: 5rem;
   }
 }
