--- a/sass/sections/_instructions.scss
+++ b/sass/sections/_instructions.scss
@@ -1,25 +1,36 @@
 .instructions-intro {
   text-align: center;
-  margin-top: 5rem;
-  margin-bottom: 5rem;
+  margin: 5rem auto;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
 
+  @include respond(phone) {
+    margin: 2rem auto
+  }
+
   &__header {
     color: $color-primary;
     font-size: 5rem;
     text-align: center;
+
+    @include respond(phone) {
+      font-size: 3.5rem;
+    }
   }
 
   &__text {
     line-height: 175%;
-
     margin: 1rem auto;
     font-size: 2rem;
     max-width: 75ch;
     text-align: left;
+
+    @include respond(phone) {
+      font-size: 1.75rem;
+      margin: auto .5rem;
+    }
   }
 
   &__button {
@@ -35,11 +46,14 @@
     text-decoration: none;
     color: whitesmoke;
 
+    @include respond(phone){
+      padding: .75rem 4rem;
+    }
+
     &:hover {
       background: whitesmoke;
       border: 3px solid $color-primary;
       color: $color-primary;
-      
       cursor: pointer;
     }
 
@@ -48,4 +62,3 @@
     }
   }
 }
-
