--- a/sass/sections/_instructions.scss
+++ b/sass/sections/_instructions.scss
@@ -1,6 +1,6 @@
 .instructions-intro {
   text-align: center;
-  margin: 5rem auto;
+  margin: 8rem auto;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
@@ -45,20 +45,39 @@
     outline: none;
     text-decoration: none;
     color: whitesmoke;
+    position: relative;
 
-    @include respond(phone){
-      padding: .75rem 4rem;
+    &::before {
+      content: "";
+      z-index: -1;
+      display: inline-block;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      height: 100%;
+      width: 100%;
+      border-radius: 200px;
+      background: $color-primary
     }
 
+
+
     &:hover {
-      background: whitesmoke;
-      border: 3px solid $color-primary;
-      color: $color-primary;
       cursor: pointer;
+    }
+
+    &:hover::before {
+      animation: link-expand .5s linear;
+
     }
 
     &:active {
       box-shadow: 0 0.25rem 2rem gray;
+    }
+
+    @include respond(phone) {
+      padding: .75rem 4rem;
     }
   }
 }
