added tertiary color

--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -1,6 +1,11 @@
 // COLORS
-$color-primary: #468499;
+$color-primary: hsl(195, 37%, 47%); // original blue
+// $color-primary: hsl(137, 28%, 44%); // hunter green
+// $color-primary: hsl(158, 100%, 33%); // forest green
+
 $color-secondary: whitesmoke;
+
+$color-tertiary: #515151;
 
 // FONT
 $default-font-size: 1.6rem;
