--- a/sass/sections/_intro.scss
+++ b/sass/sections/_intro.scss
@@ -56,8 +56,6 @@
     display: flex;
     justify-content: center;
     align-items: center;
-
-
   }
 
   &__heading {
@@ -74,6 +72,9 @@
       animation: none;
       opacity: 1;
       top: 0;
+    }
+    @include respond(small-phone) {
+      font-size: 3.5rem;
     }
   }
 }
