--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -30,7 +30,7 @@ body {
   box-sizing: border-box;
   background: whitesmoke;
   color: #515151;
-  
+
 
   @include respond(tab-port) {
     padding: 0;
@@ -42,15 +42,40 @@ body {
 }
 
 .contact-schedule {
-  margin: 5rem auto;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
-  height: 50vh;
   opacity: 0;
-  @include respond(tab-port){
+  padding: 3rem;
+  position: relative;
+  overflow: hidden;
+
+  &::after {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    filter: blur(50px);
+    z-index: 3;
+  }
+
+  @include respond(tab-port) {
     opacity: 1;
     flex-direction: column-reverse;
     height: fit-content;
   }
+}
+
+.background-blur {
+  width: 100%;
+  height: 99.5%;
+  position: absolute;
+  filter: blur(5px);
+  z-index: -1;
+  overflow: hidden;
+  transform: scale(1.1);
+
+  background-image: linear-gradient(rgba(75, 142, 164, 0.8), rgba(75, 142, 164, 0.8)), url('./img/lake.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
 }
