--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -31,7 +31,6 @@ body {
   background: whitesmoke;
   color: #515151;
 
-
   @include respond(tab-port) {
     padding: 0;
   }
@@ -67,7 +66,7 @@ body {
 
 .background-blur {
   width: 100%;
-  height: 99.5%;
+  height: 100%;
   position: absolute;
   filter: blur(5px);
   z-index: -1;
@@ -78,4 +77,8 @@ body {
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
+}
+
+.faded-text {
+  color: rgba(245, 245, 245, .7);
 }
