--- a/sass/sections/_instructions.scss
+++ b/sass/sections/_instructions.scss
@@ -46,13 +46,10 @@
     text-decoration: none;
     color: whitesmoke;
     position: relative;
+    margin: 2rem auto;
 
     @include respond(phone) {
       padding: .75rem 4rem;
-    }
-
-    @include respond(small-phone) {
-      margin: 2rem;
     }
 
     &::before {
@@ -68,8 +65,6 @@
       border-radius: 200px;
       background: $color-primary
     }
-
-
 
     &:hover {
       cursor: pointer;
