--- a/sass/sections/_about.scss
+++ b/sass/sections/_about.scss
@@ -1,13 +1,11 @@
 .about {
-
-  border-bottom: 5px solid $color-tertiary;
+  border-bottom: 0.5vh solid $color-tertiary;
   padding: 3rem 0;
 
   &__header {
     color: $color-primary;
     text-align: center;
     font-size: 5rem;
-
   }
 
   &__bio-mugshot-parent {
