--- a/sass/sections/_contact.scss
+++ b/sass/sections/_contact.scss
@@ -2,6 +2,10 @@
   text-align: center;
   color: $color-secondary;
 
+  @include respond(phone) {
+    margin: 2rem auto
+  }
+
   &__header {
     font-size: 5rem;
 
