increased padding around text

--- a/sass/sections/_instructions.scss
+++ b/sass/sections/_instructions.scss
@@ -23,6 +23,7 @@
   &__text {
     line-height: 175%;
     margin: 1rem auto;
+    padding: 0 1rem;
     font-size: 2rem;
     max-width: 75ch;
     text-align: left;
